--- a/tools/open-speed-test.html
+++ b/tools/open-speed-test.html
@@ -7,7 +7,7 @@
 	<div style="text-align:right;position:relative;">
 		<div style="min-height:360px;">
 			<div style="width:100%;height:0;padding-bottom:50%;position:relative;">
-				<iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/speedtest"></iframe>
+				<iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/speedtest?L=light"></iframe>
 				<img src="https://i.ibb.co/ZcwRhL6/logo-mafkon.png" style="position:absolute;bottom:0;right:0;margin:10px;width:100px;height:auto;">
 			</div>
 		</div>
