--- a/tools/index.html
+++ b/tools/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - menu with awesome hover </title>
+  <title>Tools Mafkon Project</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'><link rel="stylesheet" href="./style.css">
@@ -21,9 +21,9 @@
                         <div class="row">
                             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
                                 <div class="page-title  home text-center">
-                                  <span class="heading-page"> Welcome to My Page
+                                  <span class="heading-page"> Welcome to Mafkon Project
                                   </span>
-                                    <p class="mt20">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+                                    <p class="mt20">Dengan segala kerendahan hati, Mafkon Project merasa terhormat untuk mempersembahkan sebuah alat yang sederhana namun efektif, yang akan membantu teman-teman dalam berbagai tugas dan kegiatan.</p>
                                 </div>
 
                                 <div class="hexagon-menu clear">
@@ -38,12 +38,12 @@
                                             <div></div>
                                             <div></div>
                                         </div>
-                                        <a  class="hex-content">
+                                        <a href="https://mafkon.github.io" class="hex-content">
                                             <span class="hex-content-inner">
                                                 <span class="icon">
                                                     <i class="fa fa-universal-access"></i>
                                                 </span>
-                                                <span class="title">Welcome</span>
+                                                <span class="title">Home</span>
                                             </span>
                                             <svg viewBox="0 0 173.20508075688772 200" height="200" width="174" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z" fill="#1e2530"></path></svg>
                                         </a>
