--- a/tools/index.html
+++ b/tools/index.html
@@ -182,6 +182,17 @@
             </div>
   </main>
 <!-- partial -->
+  
+  <center><h2> List Tools Yang Dibuat:</h2></center>
+  <ul>
+  <li>
+    <a href="https://mafkon.github.io/tools/open-speed-test.html" class="red-button">Open Speed Test</a>
+  </li>
+  <li>
+    <a href="https://mafkon.github.io/tools/random-kelompok.html" class="red-button">Random Kelompok</a>
+  </li>
+  </ul>
+  
   <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'></script>
 </body>
 </html>
