--- a/tools/index.html
+++ b/tools/index.html
@@ -184,7 +184,9 @@
   </main>
 <!-- partial -->
   
-   <style>
+
+  <center><h3>List Tools Yang Tersedia</h3></center>
+    <style>
       ul {
         list-style: none; /* menghilangkan tanda titik pada list */
         display: flex; /* membuat list berbentuk flexbox */
@@ -194,6 +196,7 @@
       }
       li {
         margin-bottom: 10px; /* memberikan jarak antar tombol secara vertikal */
+        flex-basis: calc(25% - 15px); /* membuat tombol berjarak lebih dekat */
       }
       .red-button {
         display: block; /* membuat tombol berbentuk block */
@@ -205,25 +208,13 @@
         border: none; /* menghapus border tombol */
         border-radius: 5px; /* memberikan border-radius pada tombol */
         transition: all 0.3s ease; /* memberikan transisi ketika tombol dihover */
+        box-shadow: 0px 3px 0px #ff6600; /* memberikan shadow pada tombol */
       }
       .red-button:hover {
         background-color: #ff4444; /* memberikan efek hover pada tombol */
         cursor: pointer; /* mengubah bentuk kursor saat dihover */
       }
     </style>
-  </head>
-  <body>
-    <ul>
-      <li><a href="https://mafkon.github.io/tools/open-speed-test.html" class="red-button">Open Speed Test</a></li>
-      <li><a href="https://mafkon.github.io/tools/random-kelompok.html" class="red-button">Random Kelompok</a></li>
-      <li><a href="#" class="red-button">Tombol Baru</a></li>
-      <li><a href="#" class="red-button">Tombol Baru</a></li>
-      <li><a href="#" class="red-button">Tombol Baru</a></li>
-      <li><a href="#" class="red-button">Tombol Baru</a></li>
-      <li><a href="#" class="red-button">Tombol Baru</a></li>
-      <li><a href="#" class="red-button">Tombol Baru</a></li>
-    </ul>
-  </body>
   
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'></script>
 </body>
