--- a/tools/index.html
+++ b/tools/index.html
@@ -216,6 +216,19 @@
       }
     </style>
   
+  <body>
+    <ul>
+      <li><a href="https://mafkon.github.io/tools/open-speed-test.html" class="red-button">Open Speed Test</a></li>
+      <li><a href="https://mafkon.github.io/tools/random-kelompok.html" class="red-button">Random Kelompok</a></li>
+      <li><a href="#" class="red-button">Tombol Baru</a></li>
+      <li><a href="#" class="red-button">Tombol Baru</a></li>
+      <li><a href="#" class="red-button">Tombol Baru</a></li>
+      <li><a href="#" class="red-button">Tombol Baru</a></li>
+      <li><a href="#" class="red-button">Tombol Baru</a></li>
+      <li><a href="#" class="red-button">Tombol Baru</a></li>
+    </ul>
+  </body>
+  
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'></script>
 </body>
 </html>
