--- a/tools/index.html
+++ b/tools/index.html
@@ -184,9 +184,15 @@
   </main>
 <!-- partial -->
   
-
-  <center><h3>List Tools Yang Tersedia</h3></center>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Menu Single Page</title>
     <style>
+      body {
+        margin: 0; /* menghapus margin pada body */
+        padding: 20px; /* memberikan padding pada body */
+      }
       ul {
         list-style: none; /* menghilangkan tanda titik pada list */
         display: flex; /* membuat list berbentuk flexbox */
@@ -195,7 +201,7 @@
         padding: 0; /* menghapus padding pada list */
       }
       li {
-        margin-bottom: 10px; /* memberikan jarak antar tombol secara vertikal */
+        margin-bottom: 20px; /* memberikan jarak antar tombol secara vertikal */
         flex-basis: calc(25% - 15px); /* membuat tombol berjarak lebih dekat */
       }
       .red-button {
@@ -215,8 +221,10 @@
         cursor: pointer; /* mengubah bentuk kursor saat dihover */
       }
     </style>
-  
+  </head>
   <body>
+    <br><br><br><br><br><br>
+    <center><h3>List Tools Yang Tersedia</h3></center>
     <ul>
       <li><a href="https://mafkon.github.io/tools/open-speed-test.html" class="red-button">Open Speed Test</a></li>
       <li><a href="https://mafkon.github.io/tools/random-kelompok.html" class="red-button">Random Kelompok</a></li>
@@ -228,6 +236,8 @@
       <li><a href="#" class="red-button">Tombol Baru</a></li>
     </ul>
   </body>
+</html>
+
   
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'></script>
 </body>
