--- a/tools/index.html
+++ b/tools/index.html
@@ -224,7 +224,7 @@
   </head>
   <body>
     <br><br>
-    <center><h1>List Tools Yang Tersedia</h1></center>
+    <center><font color="white"><h1>List Tools Yang Tersedia</h1></font></center>
     <br><br>
     <ul>
       <li><a href="https://mafkon.github.io/tools/open-speed-test.html" class="red-button">Open Speed Test</a></li>
