--- a/tools/index.html
+++ b/tools/index.html
@@ -224,7 +224,7 @@
   </head>
   <body>
     <br><br>
-    <center><font color="white"><h1>List Tools Yang Tersedia</h1></font></center>
+    <center><h1>List Tools Yang Tersedia</h1></center>
     <br><br>
     <ul>
       <li><a href="https://mafkon.github.io/tools/open-speed-test.html" class="red-button">Open Speed Test</a></li>
@@ -237,8 +237,6 @@
       <li><a href="#" class="red-button">Tombol Baru</a></li>
     </ul>
   </body>
-</html>
-
   
 <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'></script>
 </body>
