--- a/tools/random-kelompok.html
+++ b/tools/random-kelompok.html
@@ -114,8 +114,8 @@
 		<div id="result"></div>
         
 		<div class="watermark">
-			<img src="https://i.ibb.co/ZcwRhL6/logo-mafkon.png" alt="Logo Mafkon" style="position: fixed; right: 10px; bottom: 10px; z-index: 999;">
-
+			<a href="https://mafkon.github.io/tools"><img src="https://i.ibb.co/ZcwRhL6/logo-mafkon.png" alt="Logo Mafkon" style="position: fixed; right: 10px; bottom: 10px; z-index: 999;">
+			</a>
 		</div>
 	</div>
 
