--- a/tools/open-speed-test.html
+++ b/tools/open-speed-test.html
@@ -21,10 +21,11 @@
 		<div style="text-align:right;position:relative;">
 			<div style="min-height:360px;">
 				<div style="width:100%;height:0;padding-bottom:50%;position:relative;">
-					<iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/speedtest?L=light"></iframe>
+					<iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/speedtest/?L=light?Widget&run=5"></iframe>
 				</div>
 				<div class="watermark">
-				<img src="https://i.ibb.co/ZcwRhL6/logo-mafkon.png" alt="Logo Mafkon" style="position: fixed; right: 10px; bottom: 10px; z-index: 999;">
+				<a href="https://mafkon.github.io/tools"><img src="https://i.ibb.co/ZcwRhL6/logo-mafkon.png" alt="Logo Mafkon" style="position: fixed; right: 10px; bottom: 10px; z-index: 999;">
+				</a>
 				</div>
 			</div>
 		</div>
