--- a/tools/open-speed-test.html
+++ b/tools/open-speed-test.html
@@ -15,19 +15,30 @@
 		.watermark img {
 		height: 50px;
 		}
+		
+	
+	  	#sc-container {
+		margin: 0 auto;
+	 	}
+
+		
 	</style>
 	
 	<body>
-		<div style="text-align:right;position:relative;">
-			<div style="min-height:360px;">
-				<div style="width:100%;height:0;padding-bottom:50%;position:relative;">
-					<iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/speedtest/?Widget&run=5"></iframe>
-				</div>
+		<div style="text-align:right;"><div style="min-height:360px;"><div style="width:100%;height:0;padding-bottom:50%;position:relative;"><iframe style="border:none;position:absolute;top:0;left:0;width:100%;height:100%;min-height:360px;border:none;overflow:hidden !important;" src="//openspeedtest.com/speedtest"></iframe></div></div></div>
+	
 				<div class="watermark">
 				<a href="https://mafkon.github.io/tools"><img src="https://i.ibb.co/ZcwRhL6/logo-mafkon.png" alt="Logo Mafkon" style="position: fixed; right: 10px; bottom: 10px; z-index: 999;">
 				</a>
 				</div>
-			</div>
+	
+		<div id="sc-container">
+		    <div id="sc-branding" class="sc-bb">
+			<a target="_blank" href="https://www.speedcheck.org/id/">
+			    <img src="https://cdn.speedcheck.org/branding/speedcheck-logo-18.png" alt="Speedcheck"/>
+			</a>
+		    </div>
 		</div>
+		<script src="https://cdn.speedcheck.org/basic/scbjs.min.js" async></script>
 	</body>
 </html>
